--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://gitlab.com/javimosch/lafermemariott/issues"
   },
-  "homepage": "https://gitlab.com/javimosch/lafermemariott#readme"
+  "homepage": "https://gitlab.com/javimosch/lafermemariott#readme",
+  "dependencies": {
+    "atob": "^2.1.2",
+    "btoa": "^1.2.1",
+    "nodemon": "^2.0.22"
+  }
 }
